ctrl, drag, separate, ctrl+a, esc working

--- a/md-drag-select.html
+++ b/md-drag-select.html
@@ -8,7 +8,7 @@
 <html>
 <head>
 	<title>MD-DRAG-AND-SELECT</title>
-	<link rel="stylesheet" type="text/css" href="./md-drag-drop.css">
+	<link rel="stylesheet" type="text/css" href="./style/md-drag-drop.css">
 </head>
 <body>
 	<h3>Drag and select</h3>
@@ -64,9 +64,9 @@
 	<div class="drop">Jacob<input type='checkbox'></div>
 	<div class="drop">Jacob<input type='checkbox'></div>
 </body>
-	<script src="./jquery-1.7.2.js"></script>
-	<script src="./jquery.event.drag-2.2.js"></script>
-	<script src="./jquery.event.drop-2.2.js"></script>
-	<script src="./md-drag-drop.js"></script>
-	<script src="./md-ctrl-a-select.js"></script>
+	<script src="./lib/jquery-1.7.2.js"></script>
+	<script src="./lib/jquery.event.drag-2.2.js"></script>
+	<script src="./lib/jquery.event.drop-2.2.js"></script>
+	<script src="./script/md-drag-drop.js"></script>
+	<script src="./script/md-ctrl-a-select.js"></script>
 </html>
