--- a/md-drag-select.html
+++ b/md-drag-select.html
@@ -18,53 +18,13 @@
 		<li>Dragging and Selecting selects all files in covered area.</li>
 		<li><small>checkboxes are used for internal implementations.</small></li>
 	</ol>
-
-	<div class="drop" index="one">Jacob<input type='checkbox'></div>
-	<div class="drop" index="two">Jacob<input type='checkbox'></div>
-	<div class="drop" index="three">Jacob<input type='checkbox'></div>
-	<div class="drop" index="four">Jacob<input type='checkbox'></div>
-	<div class="drop" index="five">Jacob<input type='checkbox'></div>
-	<div class="drop" index="six">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
-	<div class="drop">Jacob<input type='checkbox'></div>
 </body>
 	<script src="./lib/jquery-1.7.2.js"></script>
+	<script type="text/javascript">
+		for (var i = 35; i >= 0; i--) {
+			$("body").append($("<div class='drop'>Jacob<input type='checkbox'></div>"))
+		}
+	</script>
 	<script src="./lib/jquery.event.drag-2.2.js"></script>
 	<script src="./lib/jquery.event.drop-2.2.js"></script>
 	<script src="./script/md-drag-drop.js"></script>
