CTRL + Click DisSelect Working

--- a/md-drag-select.html
+++ b/md-drag-select.html
@@ -15,8 +15,14 @@
 	<h3>Drag and select</h3>
 
 	<ol>
-		<li>CTRL + A Selects all files</li>
-		<li>Dragging and Selecting selects all files in covered area.</li>
+		<li>press CTRL and select multiple elements by clicking.</li>
+		<li>press CTRL and click same elements to disSelect. (workes for one element at a time drag select wont disSelect.)</li>
+		<li>press Shift and select continuous elements in a row.</li>
+		<li>press CTRL + A and select all element.</li>
+		<li>Press ESC to disselect all elements.</li>
+		<li>Drag (and make a rectangle) and all files in the area are selected. (calling Drag and select)</li>
+		<li>press CTRL / SHIFT and then Drag and select to append your selection.</li>
+
 		<li><small>checkboxes are used for internal implementations.</small></li>
 	</ol>
 </body>
